Fixed text being too dark

--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -68,6 +68,7 @@ pre code {
 pre {
 	padding: 1rem;
 	overflow-x: auto;
+	color: white;
 }
 
 img {
